--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "check-coverage": "istanbul check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "start": "NODE_ENV=development node server/dev-server.js",
+    "prepublish": "npm run build",
+    "postpublish": "publish-latest",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
@@ -31,21 +33,21 @@
     "commitizen": "~2.4.6",
     "css-loader": "~0.23.0",
     "cz-conventional-changelog": "~1.1.4",
-    "eslint": "~1.10.1",
+    "eslint": "~1.10.2",
     "eslint-loader": "~1.1.1",
     "extract-text-webpack-plugin": "~0.9.1",
     "file-loader": "~0.8.5",
     "ghooks": "~1.0.1",
     "html-webpack-plugin": "~1.7.0",
-    "json-loader": "~0.5.4",
     "isparta-loader": "~2.0.0",
     "istanbul": "~0.4.0",
+    "json-loader": "~0.5.4",
     "karma": "~0.13.15",
     "karma-chai-plugins": "~0.6.1",
     "karma-coverage": "~0.5.3",
     "karma-es6-shim": "~0.1.3",
     "karma-mocha": "~0.2.1",
-    "karma-mocha-reporter": "~1.1.1",
+    "karma-mocha-reporter": "~1.1.3",
     "karma-phantomjs-launcher": "~0.2.1",
     "karma-sourcemap-loader": "~0.3.5",
     "karma-webpack": "~1.7.0",
@@ -53,7 +55,8 @@
     "ng-cache-loader": "0.0.13",
     "node-bourbon": "~4.2.3",
     "node-sass": "~3.4.2",
-    "phantomjs": "~1.9.18",
+    "phantomjs": "~1.9.19",
+    "publish-latest": "~1.1.2",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.1.2",
     "semantic-release": "~4.3.5",
@@ -73,11 +76,7 @@
   "keywords": [
     "sanji"
   ],
-  "author": {
-    "name": "Zack Yang",
-    "email": "zack9433@gmail.com",
-    "url": "https://github.com/zack9433"
-  },
+  "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "license": "MIT",
   "homepage": "https://github.com/Sanji-IO/sanji-time-ui",
   "dependencies": {
