--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanji-time-ui",
-  "version": "0.0.0-semantic-released",
+  "version": "1.0.2",
   "main": "dist/sanji-time-ui",
   "config": {
     "ghooks": {
