--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "sanji-time-ui",
+  "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
+  "description": "Sanji Time UI",
   "version": "0.0.0-semantic-released",
-  "main": "dist/sanji-time-ui",
+  "main": "index",
   "config": {
     "ghooks": {
       "pre-commit": ""
@@ -76,7 +78,6 @@
   "keywords": [
     "sanji"
   ],
-  "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "license": "MIT",
   "homepage": "https://github.com/Sanji-IO/sanji-time-ui",
   "dependencies": {
