--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sanji-time-ui",
   "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "description": "Sanji Time UI",
-  "version": "0.0.0-semantic-released",
+  "version": "1.0.5",
   "main": "index",
   "config": {
     "ghooks": {
