fix(dependency): upgrade dependency

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.9",
+    "angular-mocks": "~1.5.0",
     "autoprefixer-loader": "~3.2.0",
     "babel-core": "~5.8.34",
     "babel-eslint": "~4.1.6",
@@ -51,7 +51,7 @@
     "karma-es6-shim": "~0.2.0",
     "karma-mocha": "~0.2.1",
     "karma-mocha-reporter": "~1.1.5",
-    "karma-phantomjs-launcher": "~0.2.3",
+    "karma-phantomjs-launcher": "~1.0.0",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~1.7.0",
     "ng-annotate-loader": "0.1.0",
@@ -61,7 +61,7 @@
     "phantomjs": "~1.9.19",
     "raw-loader": "~0.5.1",
     "sass-loader": "~3.1.2",
-    "semantic-release": "~6.2.0",
+    "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
     "webpack": "~1.12.11",
@@ -82,11 +82,11 @@
   "homepage": "https://github.com/Sanji-IO/sanji-time-ui",
   "dependencies": {
     "jquery": "~2.2.0",
-    "angular": "~1.4.9",
+    "angular": "~1.5.0",
     "angular-material": "~1.0.5",
     "angular-material-data-table": "~0.9.9",
     "angular-material-icons": "~0.6.0",
-    "sanji-core-ui": "~1.11.5",
+    "sanji-core-ui": "~1.12.0",
     "socket.io-client": "~1.4.5",
     "svg-morpheus": "alexk111/SVG-Morpheus#v0.1.8",
     "toastr": "~2.1.2"
