--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "check-coverage": "istanbul check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "start": "NODE_ENV=development node server/dev-server.js",
-    "prepublish": "npm run build",
     "postpublish": "publish-latest",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -32,7 +31,7 @@
     "babel-eslint": "~4.1.6",
     "babel-loader": "~5.3.3",
     "babel-runtime": "~5.8.34",
-    "commitizen": "~2.5.0",
+    "commitizen": "~2.7.0",
     "css-loader": "~0.23.1",
     "cz-conventional-changelog": "~1.1.5",
     "eslint": "~1.10.3",
@@ -46,11 +45,11 @@
     "istanbul": "~0.4.2",
     "json-loader": "~0.5.4",
     "karma": "~0.13.19",
-    "karma-chai-plugins": "~0.6.1",
+    "karma-chai-plugins": "~0.7.0",
     "karma-coverage": "~0.5.3",
     "karma-es6-shim": "~0.2.0",
     "karma-mocha": "~0.2.1",
-    "karma-mocha-reporter": "~1.1.5",
+    "karma-mocha-reporter": "~2.0.0",
     "karma-phantomjs-launcher": "~1.0.0",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~1.7.0",
@@ -60,13 +59,13 @@
     "node-sass": "~3.4.2",
     "phantomjs": "~1.9.19",
     "raw-loader": "~0.5.1",
-    "sass-loader": "~3.1.2",
+    "sass-loader": "~3.2.0",
     "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
     "webpack": "~1.12.11",
     "webpack-dev-server": "~1.14.1",
-    "webpack-notifier": "~1.2.1"
+    "webpack-notifier": "~1.3.0"
   },
   "repository": {
     "type": "git",
@@ -81,14 +80,7 @@
   "license": "MIT",
   "homepage": "https://github.com/Sanji-IO/sanji-time-ui",
   "dependencies": {
-    "jquery": "~2.2.0",
-    "angular": "~1.5.0",
-    "angular-material": "~1.0.5",
-    "angular-material-data-table": "~0.9.9",
-    "angular-material-icons": "~0.6.0",
-    "sanji-core-ui": "~1.12.0",
-    "socket.io-client": "~1.4.5",
-    "svg-morpheus": "alexk111/SVG-Morpheus#v0.1.8",
-    "toastr": "~2.1.2"
+    "angular-clock": "~0.5.1",
+    "sanji-core-ui": "~1.15.4"
   }
 }
