--- a/package.json
+++ b/package.json
@@ -13,58 +13,73 @@
     }
   },
   "scripts": {
-    "test": "NODE_ENV=test karma start",
-    "test:once": "karma start",
+    "validate": "npm run test:once && npm run check-coverage",
+    "start": "npm run mock:serve && npm run dev:serve",
+    "dev:serve": "NODE_ENV=development node server/dev-server.js && kill $npm_package_config_mockserver",
+    "test": "NODE_ENV=test BABEL_ENV=test karma start",
+    "test:e2e": "npm run mock:serve && npm run protractor",
+    "test:once": "BABEL_ENV=test karma start",
+    "protractor": "protractor protractor.conf.js && kill $npm_package_config_mockserver",
+    "mock:serve": "mockserver -I schema & npm config set sanji-time-ui:mockserver $!",
     "prebuild": "rm -rf dist && mkdir dist",
     "build": "NODE_ENV=production webpack --config webpack.build.js --display-modules",
     "commit": "git-cz",
-    "check-coverage": "istanbul check-coverage --statements 90 --branches 90 --functions 90 --lines 90",
+    "check-coverage": "istanbul check-coverage --statements 75 --branches 75 --functions 75 --lines 75",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "start": "NODE_ENV=development node server/dev-server.js",
-    "postpublish": "publish-latest",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "post-install": "webdirver-manager update"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
     "autoprefixer-loader": "~3.2.0",
-    "babel-core": "~5.8.34",
-    "babel-eslint": "~4.1.6",
-    "babel-loader": "~5.3.3",
-    "babel-runtime": "~5.8.34",
-    "commitizen": "~2.7.0",
+    "babel-core": "^6.0.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-plugin-lodash": "^3.2.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015-webpack": "^6.4.1",
+    "babel-runtime": "^6.6.1",
+    "chai": "~3.5.0",
+    "commitizen": "^2.8.0",
     "css-loader": "~0.23.1",
-    "cz-conventional-changelog": "~1.1.5",
-    "eslint": "~1.10.3",
-    "eslint-loader": "~1.2.0",
+    "cucumber": "~0.7.0",
+    "cz-conventional-changelog": "^1.1.5",
+    "eslint": "^2.0.0",
+    "eslint-loader": "^1.3.0",
     "expose-loader": "~0.7.1",
-    "extract-text-webpack-plugin": "~1.0.1",
-    "file-loader": "~0.8.5",
-    "ghooks": "~1.0.3",
-    "html-webpack-plugin": "~1.7.0",
-    "isparta-loader": "~2.0.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.1",
+    "file-loader": "~0.9.0",
+    "ghooks": "^1.2.0",
+    "html-webpack-plugin": "~2.22.0",
     "istanbul": "~0.4.2",
     "json-loader": "~0.5.4",
     "karma": "~0.13.19",
     "karma-chai-plugins": "~0.7.0",
-    "karma-coverage": "~0.5.3",
-    "karma-es6-shim": "~0.2.0",
-    "karma-mocha": "~0.2.1",
-    "karma-mocha-reporter": "~2.0.0",
-    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-chrome-launcher": "~1.0.1",
+    "karma-coverage": "~1.1.0",
+    "karma-mocha": "~1.1.1",
     "karma-sourcemap-loader": "~0.3.7",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "~1.7.0",
+    "lodash-webpack-plugin": "^0.9.2",
+    "mocha": "~2.5.3",
     "ng-annotate-loader": "0.1.0",
     "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
-    "node-sass": "~3.4.2",
-    "phantomjs": "~1.9.19",
+    "node-sass": "~3.8.0",
+    "opt-cli": "~1.5.1",
+    "postcss-loader": "~0.9.1",
+    "protractor": "~2.5.1",
     "raw-loader": "~0.5.1",
-    "sass-loader": "~3.2.0",
+    "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
+    "sass-loader": "~4.0.0",
     "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "~1.12.11",
-    "webpack-dev-server": "~1.14.1",
+    "webpack": "2.1.0-beta.17",
+    "webpack-dev-server": "2.1.0-beta.0",
     "webpack-notifier": "~1.3.0"
   },
   "repository": {
