feat(component): refactor component

--- a/package.json
+++ b/package.json
@@ -31,16 +31,13 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
-    "autoprefixer-loader": "~3.2.0",
+    "autoprefixer": "~6.3.7",
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.0",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-lodash": "^3.2.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015-webpack": "^6.4.1",
-    "babel-runtime": "^6.6.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "~3.5.0",
     "commitizen": "^2.8.0",
     "css-loader": "~0.23.1",
@@ -49,7 +46,7 @@
     "eslint": "^2.0.0",
     "eslint-loader": "^1.3.0",
     "expose-loader": "~0.7.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "~0.9.0",
     "ghooks": "^1.2.0",
     "html-webpack-plugin": "~2.22.0",
@@ -78,8 +75,8 @@
     "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "2.1.0-beta.17",
-    "webpack-dev-server": "2.1.0-beta.0",
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-notifier": "~1.3.0"
   },
   "repository": {
@@ -99,6 +96,6 @@
   },
   "dependencies": {
     "angular-clock": "~0.5.1",
-    "sanji-core-ui": "~1.15.4"
+    "sanji-core-ui": "~1.16.0"
   }
 }
