--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
-    "autoprefixer": "~6.3.7",
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.0.0",
@@ -40,10 +40,10 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "~3.5.0",
     "commitizen": "^2.8.0",
-    "css-loader": "~0.23.1",
+    "css-loader": "^0.24.0",
     "cucumber": "~0.7.0",
     "cz-conventional-changelog": "^1.1.5",
-    "eslint": "^2.0.0",
+    "eslint": "^3.3.0",
     "eslint-loader": "^1.3.0",
     "expose-loader": "~0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
@@ -52,22 +52,23 @@
     "html-webpack-plugin": "~2.22.0",
     "istanbul": "~0.4.2",
     "json-loader": "~0.5.4",
-    "karma": "~0.13.19",
+    "karma": "~1.2.0",
     "karma-chai-plugins": "~0.7.0",
-    "karma-chrome-launcher": "~1.0.1",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-coverage": "~1.1.0",
     "karma-mocha": "~1.1.1",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "~1.7.0",
-    "lodash-webpack-plugin": "^0.9.2",
-    "mocha": "~2.5.3",
+    "karma-webpack": "~1.8.0",
+    "lodash-webpack-plugin": "^0.10.0",
+    "mocha": "~3.0.0",
     "ng-annotate-loader": "0.1.0",
     "ng-cache-loader": "0.0.15",
     "node-bourbon": "~4.2.3",
     "node-sass": "~3.8.0",
     "opt-cli": "~1.5.1",
-    "postcss-loader": "~0.9.1",
+    "postcss-loader": "^0.11.0",
+    "progress-bar-webpack-plugin": "^1.9.0",
     "protractor": "~2.5.1",
     "raw-loader": "~0.5.1",
     "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
@@ -76,8 +77,7 @@
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
     "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-notifier": "~1.3.0"
+    "webpack-dev-server": "^2.1.0-beta.0"
   },
   "repository": {
     "type": "git",
@@ -96,6 +96,6 @@
   },
   "dependencies": {
     "angular-clock": "~0.5.1",
-    "sanji-core-ui": "~1.16.0"
+    "sanji-core-ui": "~1.17.0"
   }
 }
