--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "~0.9.0",
     "ghooks": "^1.2.0",
-    "html-webpack-plugin": "~2.22.0",
+    "html-webpack-plugin": "^2.22.0",
     "istanbul": "~0.4.2",
     "json-loader": "~0.5.4",
     "karma": "~1.2.0",
