chore(build): modify for webapck 2 breaking changes

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "scripts": {
     "validate": "npm run test:once && npm run check-coverage",
     "start": "npm run mock:serve && npm run dev:serve",
-    "dev:serve": "NODE_ENV=development node server/dev-server.js && kill $npm_package_config_mockserver",
-    "test": "NODE_ENV=test BABEL_ENV=test karma start",
+    "dev:serve": "cross-env NODE_ENV=development node server/dev-server.js && kill $npm_package_config_mockserver",
+    "test": "cross-env NODE_ENV=test BABEL_ENV=test karma start",
     "test:e2e": "npm run mock:serve && npm run protractor",
-    "test:once": "BABEL_ENV=test karma start",
+    "test:once": "cross-env BABEL_ENV=test karma start",
     "protractor": "protractor protractor.conf.js && kill $npm_package_config_mockserver",
     "mock:serve": "mockserver -I schema & npm config set sanji-time-ui:mockserver $!",
-    "prebuild": "rm -rf dist && mkdir dist",
-    "build": "NODE_ENV=production webpack --config webpack.build.js --display-modules",
+    "prebuild": "rimraf dist && mkdir dist",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.build.js --display-modules",
     "commit": "git-cz",
     "check-coverage": "istanbul check-coverage --statements 75 --branches 75 --functions 75 --lines 75",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "~3.5.0",
     "commitizen": "^2.8.0",
+    "cross-env": "~2.0.1",
     "css-loader": "^0.24.0",
     "cucumber": "~0.7.0",
     "cz-conventional-changelog": "^1.1.5",
@@ -62,21 +63,22 @@
     "karma-webpack": "~1.8.0",
     "lodash-webpack-plugin": "^0.10.0",
     "mocha": "~3.0.0",
-    "ng-annotate-loader": "0.1.0",
-    "ng-cache-loader": "0.0.15",
+    "ng-annotate-loader": "~0.1.0",
+    "ng-cache-loader": "~0.0.15",
     "node-bourbon": "~4.2.3",
-    "node-sass": "~3.8.0",
+    "node-sass": "~3.10.0",
     "opt-cli": "~1.5.1",
     "postcss-loader": "^0.11.0",
     "progress-bar-webpack-plugin": "^1.9.0",
     "protractor": "~2.5.1",
     "raw-loader": "~0.5.1",
+    "rimraf": "~2.5.4",
     "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
     "sass-loader": "~4.0.0",
     "semantic-release": "^4.3.5",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "^2.1.0-beta.20",
+    "webpack": "^2.1.0-beta.24",
     "webpack-dev-server": "^2.1.0-beta.0"
   },
   "repository": {
