--- a/schema/index.yaml
+++ b/schema/index.yaml
@@ -166,7 +166,7 @@ externalDocs:
   x-mocks:
     TimeExample:
       {
-          "time": "2015-03-26T16:27:48.611441Z",
+          "time": "2017-03-22T17:13:54.598789+0800",
           "timezone": "Asia/Taipei",
           "ntp": {
             "enable": true,
