fix(bug): set time incorrect

--- a/schema/index.yaml
+++ b/schema/index.yaml
@@ -3,7 +3,7 @@ swagger: '2.0'
 info:
   title: System Time API
   description: System Time management
-  version: '1.0.0'
+  version: '1.1.0'
 
 schemes:
 - http
@@ -137,6 +137,7 @@ definitions:
     required:
     - cca2
     - name
+    - offset
     properties:
       cca2:
         description: ISO 3166 alpha-2 country code
@@ -144,6 +145,9 @@ definitions:
         pattern: '[A-Z]{2}'
       name:
         description: zone name
+        type: string
+      offset:
+        description: zone offset (format should be "+0800", etc)
         type: string
 
   TimezoneIso3166:
@@ -166,7 +170,7 @@ externalDocs:
   x-mocks:
     TimeExample:
       {
-          "time": "2017-03-22T17:13:54.598789+0800",
+          "time": "2015-03-26T16:27:48.611441Z",
           "timezone": "Asia/Taipei",
           "ntp": {
             "enable": true,
@@ -186,14 +190,17 @@ externalDocs:
           {
             "cca2": "AD",
             "name": "Europe/Andorra",
+            "offset": "+0100"
           },
           {
             "cca2": "AE",
-            "name": "Asia/Dubai",
+            "name": "Asia/Taipei",
+            "offset": "+0800"
           },
           {
             "cca2": "AF",
             "name": "Asia/Kabul",
+            "offset": "+0430"
           }
         ],
         "iso3166": [
