fix(travis): reset semantic-release

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sanji-time-ui",
   "author": "Zack Yang <zack9433@gmail.com> (https://github.com/zack9433)",
   "description": "Sanji Time UI",
-  "version": "0.0.0-semantic-released",
+  "version": "0.0.0-development",
   "main": "index",
   "config": {
     "ghooks": {
@@ -33,7 +33,7 @@
     "angular-mocks": "~1.5.0",
     "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
     "sanji-common-devs-ui": "~1.0.4",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.6"
   },
   "repository": {
     "type": "git",
