--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
 
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+script:
+  - yarn build
 after_success: 
   - yarn travis-deploy-once "yarn semantic-release"
 branches:
