fix(package): modify to peer dependencies

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
+    "angular-clock": "^0.7.0",
     "angular-mocks": "~1.6.8",
-    "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
     "sanji-common-devs-ui": "^7.0.0",
-    "travis-deploy-once": "^4.3.3",
-    "semantic-release": "^12.2.5"
+    "sanji-core-ui": "^4.0.0",
+    "sanji-openapi-mock": "github:sanji-io/sanji-openapi-mockserver",
+    "semantic-release": "^12.2.5",
+    "travis-deploy-once": "^4.3.3"
   },
   "repository": {
     "type": "git",
@@ -43,10 +45,12 @@
   "bugs": {
     "url": "https://github.com/Sanji-Io/sanji-time-ui/issues"
   },
-  "keywords": ["sanji"],
+  "keywords": [
+    "sanji"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/Sanji-IO/sanji-time-ui",
-  "dependencies": {
+  "peerDependencies": {
     "angular-clock": "^0.7.0",
     "sanji-core-ui": "^4.0.0"
   }
